5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1836_1273.log
== SUBMITION (2019-06-25 10:33:23) 
-- CODE:
from numpy import *
from numpy.linalg import *
x = array([[1,-1,0,0],
			  [0,1,-1,0],
			  [0, 0,1,0],
			  [1,0,0, 1]]
v = array([50,-120,350,870])
y = dot(inv(x), v.T)
print(y)
-- EXECUTION TIME:
0.712387
-- ERROR:
  File "/home/codebench/codes/1836/1273/main.py", line 7
    v = array([50,-120,350,870])
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 10:33:33) 
-- CODE:
from numpy import *
from numpy.linalg import *
x = array([[1,-1,0,0],
			  [0,1,-1,0],
			  [0, 0,1,0],
			  [1,0,0, 1]])
v = array([50,-120,350,870])
y = dot(inv(x), v.T)
print(y)
-- EXECUTION TIME:
0.929629
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
